[tool.poetry]
name = "sarase"
version = "0.1.7"
description = ""
authors = ["Alec Heckert <alecheckert@gmail.com>"]
include = ["include/sarase.h", "src/add.cpp", "src/module.cpp"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pybind11 = "^2.9.0"
setuptools = "^60"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11>=2.6", "setuptools>=60"]
build-backend = "poetry.core.masonry.api"
